# google-deepmind-hackaton-2026

./: .gitignore  README.md  docker-compose.yml  start-dev.sh
backend/: .env.example  Dockerfile  ingest.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: connection.py  migrate.py
backend/app/models/: chat.py
backend/app/services/: deepmind.py  rag.py  transcript_store.py  vapi.py
backend/assets/: Improve Your Lymphatic System for Overall Health & Appearance.json  Improve Your Lymphatic System for Overall Health & Appearance.txt  parse_transcript.py  scrape_articles.py
backend/assets/articles/: an-overview-of-manual-lymphatic-drainage.md  anatomy-and-physiology-of-the-thoracic-lymphatic-system.md  effect-of-various-photobiomodulation-regimens-on-breast-cancer-related-lymphedem.md  effectiveness-of-manual-therapy-in-patients-with-distal-radius-fracture-a-system.md  exercise-induced-cardiac-lymphatic-remodeling-mitigates-inflammation-in-the-agin.md  increased-csf-drainage-by-non-invasive-manipulation-of-cervical-lymphatics.md  lymphangiogenesis-contributes-to-exercise-induced-physiological-cardiac-growth.md  lymphangiogenesis-in-development-and-human-disease.md  lymphatic-system-of-the-head-and-neck.md  lymphatic-vessel-network-structure-and-physiology.md  lymphatic-vessels-in-the-age-of-cancer-immunotherapy.md  meningeal-lymphatic-drainage-novel-insights-into-central-nervous-system-disease.md  meningeal-lymphatics-in-central-nervous-system-diseases.md  (+5 more)
backend/assets/huberman-lab/: podcast.txt  (+3 more)
(+52 files in other folders)
